# colbook_web

./: Dockerfile  README.md  app.py  colbook.sqlite  config.py  requirements.txt
app/: __init__.py  models.py
app/algorithms/: MoreFunctions.py  canny.py
app/algorithms/ETF+CLD/: CMakeLists.txt  test.sh
app/algorithms/ETF+CLD/src/: cmd.cpp
app/auth/: forms.py  routes.py
app/main/: forms.py  routes.py
app/static/css/: 1.css  painterstyle.css
app/static/js/: canvas.js
app/templates/: 404.html  500.html  algorithms.html  base.html  generator_display_result.html  generator_enter_parameter_ETF.html  generator_enter_parameter_LOG.html  generator_enter_parameter_canny.html  generator_enter_parameter_simple.html  generator_select_algorithm.html  history.html  homepage.html  login.html  our_team.html  painter.html  privacy_policy.html  signup.html
